--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,21 @@ will be at least equal to Expand */
 .description h1 {
 	margin-left: 100px
 }
+
+
+
+
+.cmenu {margin: 0; padding: 0.3em; list-style-type: none; background-color: white;}
+	.cmenu li:hover {}
+	.cmenu hr {border: 0; border-bottom: 1px solid grey; margin: 3px 0px 3px 0px; width: 10em;}
+	.cmenu a {border: 0 !important;}
+	.cmenu a:hover {text-decoration: underline !important;}
+	.cmenu .topSep {font-size: 90%; border-top: 1px solid gray; margin-top: 0.3em; padding-top: 0.3em;}
+	th, td {text-align: left; padding-right: 1em;}
+	table {margin: 0 0 0.4em 1.3em; border: 1px solid rgb(240, 240, 240);}
+	
+	.divContext {
+		border: 1px solid blue; 
+		display: none; 
+		position: absolute
+	}
